--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jessyportfolio",
+  "name": "portfolio",
   "homepage": "https://Jessyjdi.github.io/MyPortfolio-BuildwithReact",
   "version": "0.1.0",
   "private": true,
